fixed edit button mobile

--- a/design/contacts.css
+++ b/design/contacts.css
@@ -377,7 +377,7 @@
 
 .floating-menu-options-edit-delete-button {
       display: none;
-    bottom: 116px;
+    bottom: 30px;
     border-radius: 56px;
     position: absolute;
     right: 40px;
